<resources>
    <string name="app_name">Don Limpio</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_repeat_password">Repita la contraseña</string>
    <string name="prompt_phone">Teléfono</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">La dirección de correo no es válida.</string>
    <string name="error_invalid_password">La contraseña es muy corta.</string>
    <string name="error_incorrect_password">La contraseña es incorrecta.</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Permiso de contacto es necesario para sugerencias."</string>
    <string name="o">O</string>
    <string name="register">REGISTRATE</string>
    <string name="login_facebook_button">Ingresar con facebook</string>
    <string name="login_google_button">Ingresar con Google</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="doSignup">Registrarse</string>
    <string name="no_repeat_psswd">La contraseña debe ser igual en ambos campos</string>
    <string name="name_only_letters">El nombre debe tener solo letras (Pepito-Pepa-Pepa), entre 4 y 10 caracteres</string>
    <string name="lastname_only_letters">El Apellido debe tener solo letras, entre 4 y 10 caracteres</string>
    <string name="no_empty">Los campos no pueden estár vacios</string>
    <string name="phone_matches">Teléfono debe tener 10 dígitos</string>
    <string name="id_matches">Cédula debe tener 8 dígitos</string>
    <string name="title_activity_location_map">Localización</string>
    <string name="address">Dirección</string>
    <string name="menulogout">Cerrar sesion</string>
    <string name="menuConfiguracion">Configuracion</string>
    <string name="menuMisServicios">Mis Servicios</string>
    <string name="auth_failed">Autorización fallida</string>
    <string name="dom_conf">Configuración Limpieza Doméstica</string>
    <string name="promp_combo_building_type">Seleccione Uno</string>
    <string name="build_desc">Descripción vivienda:</string>
    <string name="ironing_service">Servicio de planchado</string>
    <string name="washing_service">Servicio de lavado Automático/Manual</string>
    <string name="outside_washing">Lavado de terrazas</string>
    <string name="lbl_choose_add_services">Seleccione los servicios a tomar</string>
    <string name="meters_lbl_advice">Cuantos metros tiene el lugar de Limpieza en total, si no lo sabe coloque un valor aproximado:</string>
    <string name="next">Siguiente</string>
    <string name="here_goes_address">Digite su dirección</string>
    <string name="title_activity_set_position">Map</string>
    <string name="title_activity_tracking_service">Map</string>
    <string name="home">home</string>
    <string-array name="building_types">
        <item>Toda la casa</item>
        <item>1 - 3 Baños</item>
        <item>3 o más Baños</item>
        <item>1 o 2 Habitaciones</item>
        <item>3 o más habitaciones</item>
        <item>1 Baño - 1 habitación - Sala;Comedor;Cocina</item>
        <item>3 Baños - 3 habitaciónes - Sala;Comedor;Cocina</item>
        <item>2 Baños - 2 Habitaciones - Sala;Comedor;Cocina</item>
    </string-array>
    <string-array name="services_cats">
        <item>Construccion</item>
        <item>Plomeria</item>
        <item>Carpinteria</item>
        <item>Electricidad</item>
        <item>Limpieza</item>
        <item>Automoviles</item>
    </string-array>
    <string-array name="subcat_construccion">
        <item>Construccion casas</item>
        <item>Construccion oficinas</item>
        <item>Construccion locales</item>
        <item>Remodelaciones</item>
    </string-array>
    <string-array name="subcat_plomeria">
        <item>Tubos y drenajes</item>
        <item>Reparaciones banos y cocinas</item>
        <item>Griferias / Valvulas</item>
        <item>Tanques / Calentadores</item>
    </string-array>
    <string-array name="subcat_carpinteria">
        <item>Diseno y ensamble muebles</item>
        <item>Reparacion muebles</item>
    </string-array>
    <string-array name="subcat_electricidad">
        <item>Servicio electrico</item>
        <item>Sistemas de seguridad</item>
        <item>Calentadores electricos</item>
    </string-array>
    <string-array name="subcat_limpieza">
        <item>Limpieza domestica</item>
        <item>Limpieza comercial</item>
    </string-array>
    <string-array name="subcat_autos">
        <item>Lavado autos</item>
        <item>Reparaciones mecanicas</item>
        <item>Rines y Llantas</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name_example">Ada Lovelace</string>
    <string name="user_email_example">email@example.com</string>
    <string name="user_phone_example">300-321-1234</string>
    <string name="mis_servicios_buttonText">Mis Servicios</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dinning_stay">Sala/Comedor</string>
    <string name="kitchen">Cocina</string>
    <string name="inMeters">En metros</string>
    <string name="title_activity_car_washing">CarWashingActivity</string>
    <string name="conf_carWash">Configuración Limpieza Auto</string>
    <string name="facebook_app_id">191479331755441</string>
    <string name="fb_login_protocol_scheme">fb191479331755441</string>
    <string name="cedula">Cédula</string>
    <string name="agendar_buscar">Agendar / Buscar</string>
    <string name="mis_servicios_text">Mis Servicios</string>
    <string name="servicios_title_text">Servicios</string>
    <string name="donlimpio_text">DonLimpio</string>
    <string name="android_maiden_text">de Android Maiden</string>
  <string name="google_login_app_id">166926263135-h7h1igbhj29on4glnm5hipeth8rnkgu0.apps.googleusercontent.com</string>
</resources>